# chat-app

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  auth.py  config.py  create_demo_user.py  init_db.py  main.py  models.py  pyproject.toml  redis_client.py  requirements.txt  run.py  schemas.py  websocket_manager.py
backend/alembic/: env.py
backend/routers/: auth.py  messages.py  users.py
frontend/: Dockerfile  next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatApp.tsx  LoginForm.tsx  MessageInput.tsx  MessageList.tsx  RegisterForm.tsx  UserList.tsx
frontend/src/contexts/: AuthContext.tsx  ChatContext.tsx
frontend/src/lib/: api.ts  websocket.ts
frontend/src/types/: index.ts
